# cpp-internship

./: 2DArrayTest.cpp  2d_array.h  Array2D.h  Array2D.hpp  Gal.cpp  Gal_test_case  Gol.cpp  Gol.hpp  Main.cpp  README.md  TwoDimentioalArray.h  UniquePointer.cpp  Universe.hpp  World.h  a  test.cpp  world.h  world_test.cpp
build_systems_toturial/: CMakeLists.txt
build_systems_toturial/Main/: CMakeLists.txt  Main.cpp
build_systems_toturial/say-hello/: CMakeLists.txt
build_systems_toturial/say-hello/src/say-hello/: hello.cpp  hello.hpp
test/: CMakeLists.txt  ExampleTests.cpp
test_toturial/: CMakeLists.txt  Example.cpp  Example.hpp  ExampleTests.cpp
test_toturial/test/: CMakeLists.txt  ExampleTests.cpp
